client/web/web/media/style/common.css
/* ---------------------------------------- Common
   Session params form :
	 - SM Host
   - Login/Password
   - Session type & adv. params
*/

html, body {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	color: #333;
	overflow: hidden;
	font-family: Arial;
	font-size: 0.85em;
	background: #ddd;
}

img {
	border: none;
}

a {
	color: #369;
	font-weight: bold;
	border: none;
	text-decoration: none;
}

a:hover {
	color: #963;
}

pre {
	font-family: Arial;
	font-size: 1em;
}

h1, h2, h3, h4, h5, h6 {
	margin: 0;
	padding: 0;
	padding-top: 5px;
	padding-bottom: 10px;
	text-align: left;
	color: #666;
}

div.spacer {
	margin: 10px 0;
	clear: both;
}

div.rounded {
	border-radius : 10px 10px 10px 10px;
	-moz-border-radius: 10px 10px 10px 10px;
	-webkit-border-radius: 10px 10px 10px 10px;
	-khtml-border-radius: 10px 10px 10px 10px;
	padding: 10px;
}

div#image_ulteo-small_png {
	margin: 0 auto;
}

.msg_ok {
	color: #05a305;
	font-weight: bold;
}
.msg_error {
	color: #a30505;
	font-weight: bold;
}

/* ---------------------------------------- Main UI
   Session params form :
	 - SM Host
   - Login/Password
   - Session type & adv. params
*/

#main {
	position: absolute;
	top: 0;
	width: 100%;
}

#loginBox {
	position: relative;
	width: 900px;
	margin: 50px auto;
	background: #fff;
}

#loginForm {
	width: 95%;
	min-height: 182px;
	padding: 10px;
	margin-left: auto;
	margin-right: 0px;
	background: #eee;
}

/* ---------------------------------------- Loading screen
   Loadin and unloading screens :
   - ProgressBar
   - SessionEnd status
*/

#splashContainer {
	position: absolute;
	top: 30%;
	width: 100%;
}

#splashContainerContent {
	width: 400px;
	padding: 5px;
	margin: 0 auto;
	border: 0px;
	text-align: left;
	vertical-align: middle;
	background: #fff;
}

#endContainer {
	position: absolute;
	top: 30%;
	width: 100%;
}

#endContainerContent {
	width: 400px;
	padding: 5px;
	margin: 0 auto;
	border: 0px;
	text-align: center;
	vertical-align: middle;
	background: #fff;
}

div#progressBar {
	background: #fff;
	border: 1px solid #ccc;
	height: 10px;
	margin-top: 10px;
}

div#progressBarContent {
	background: #ddd;
	width: 0%;
	height: 10px;
	margin-left: 0px;
	margin-right: auto;
}


/* ---------------------------------------- Session
   Desktop and application mode UI :
   - Applet/Canvas containers
   - Application launchers
   - Logout/Disconnect buttons
*/

#fullScreenMessage {
	width: 400px;
	padding: 5px;
	margin: 0 auto;
	text-align: center;
	vertical-align: middle;
	border: 0px;
	background: #fff;
}

#sessionContainer {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	margin: 0 0;
}

#desktopContainer {
	position: absolute;
	top: 0px;
	left: 0px;
}

#applicationsHeader {
	position: relative;
	top: 0px;
	left: 0px;
	right: 0px;
	text-align: center;
	color: #333;
	background: #fff;
}

#applicationsContainer {
	position: relative;
	top: 0px;
	left: 0px;
	right: 0px;
	width: 100%;
	height: 100%;
	margin: 0 0;
	padding: 0px;
	background: #eee;
	border-bottom: 1px solid #ccc;
}

.applicationLauncherDisabled {
	opacity: 0.40;
	filter: alpha(opacity=40);
	-moz-opacity: 0.40;
	font-weight: bold;
}

.applicationLauncherEnabled {
	opacity: 1.00;
	filter: alpha(opacity=100);
	-moz-opacity: 1.00;
}

.application_instance_counter {
	width: 15px;
	text-align: right;
	font-size: 0.9em;
	font-style: italic;
}

/* ---------------------------------------- Notifications
   Various notifications :
	 - Error
   - OK
   - Info
*/

div#notification {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	font-size: 1.2em;
}

div#error {
	position: relative;
	width: 100%;
	z-index: 100;
	padding: 10px;
	background: #ffcccc;
}

div#ok {
	position: relative;
	width: 100%;
	z-index: 100;
	padding: 10px;
	background: #ccffcc;
}

div#info {
	position: relative;
	width: 100%;
	z-index: 100;
	padding: 10px;
	background: #f1f2a1;
}

/* ---------------------------------------- Overlays
   Top level messages :
	 - System test in progress
   - System test results
   - System test errors
   - News
   - Iframe
*/

div#overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

div#lock {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 50;
	background: #000;
	filter: alpha(opacity=80);
	-moz-opacity: 0.80;
	opacity: 0.80;
}

div#systemTest {
	position: relative;
	top: 30%;
	width: 440px;
	z-index: 100;
	margin: 0 auto;
	padding: 10px;
	background: #999;
}

div#systemTestError {
	position: relative;
	top: 30%;
	width: 440px;
	z-index: 100;
	margin: 0 auto;
	padding: 10px;
	color: #fff;
	background: #c33;
}

div#iframe {
	position: relative;
	top: 5%;
	width: 80%;
	height: 80%;
	margin: 0 auto;
	z-index: 100;
	color: #fff;
	background: #999;
}

div#news {
	position: relative;
	top: 30%;
	width: 440px;
	z-index: 100;
	margin: 0 auto;
	padding: 10px;
	background: #999;
}

/* Sub components */

#iframeContainer {
	width: 100%;
	height: 100%;
}

div#systemTestContainer {
	width: 400px;
	padding: 20px;
	margin: 0 auto;
	color: #333;
	background: #fff;
}

div#systemTestErrorContainer {
	margin: 0 auto;
	width: 400px;
	padding: 20px;
	color: #c33;
	background: #fff;
}

div#iframeCloseButton.msie6 {
	width: 26px;
	height: 26px;
	background: url('../image/close-wrap.png') no-repeat;
}

div#iframeCloseButton {
	position: relative;
	float: right;
	top: -24px;
	left: -12px;
	padding: 0;
	margin: 0;
	text-align: left;
}

div#newsContainer {
	width: 400px;
	padding: 20px;
	color: #333;
	background: #fff;
}

div#newsTitle {
	width: 98%;
	margin-bottom: 15px;
	border-bottom: 1px solid #999;
	font-weight: bold;
}

